--- a/tagha/Makefile
+++ b/tagha/Makefile
@@ -26,7 +26,10 @@ debug_shared:
 profile:
 	$(CC) $(PROFFLAGS) -c $(SRCS)
 	$(AR) cr $(LIBNAME).a $(OBJS)
-	
+
+disasm:
+	$(CC) -O2 -fverbose-asm -masm=intel -S $(SRCS)
+	#llvm-gcc -emit-llvm -S $(SRCS)
 
 clean:
 	$(RM) *.o
