--- a/assembler/Makefile
+++ b/assembler/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
-CFLAGS = -Wextra -Wall -std=c99 -s -O2 -flto
-TESTFLAGS = -Wextra -Wall -std=c99 -g -O2 -flto
+CFLAGS = -Wextra -Wall -std=c99 -static -s -O2 -flto
+TESTFLAGS = -Wextra -Wall -std=c99 -static -g -O2 -flto
 
 SRCS = libharbol/stringobj/stringobj.c
 SRCS += libharbol/bytebuffer/bytebuffer.c
