--- a/assembler/Makefile
+++ b/assembler/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wextra -Wall -std=c99 -static -s -O2 -flto
-TESTFLAGS = -Wextra -Wall -std=c99 -static -g -O2 -flto
+TFLAGS = -Wextra -Wall -std=c99 -static -g -O2 -flto
 
 SRCS = libharbol/stringobj/stringobj.c
 SRCS += libharbol/bytebuffer/bytebuffer.c
@@ -11,9 +11,11 @@ SRCS += tagha_assembler.c
 
 tagha_assembler:
 	$(CC) $(CFLAGS) $(SRCS) -o tagha_asm
+	$(CC) $(CFLAGS) libharbol/stringobj/stringobj.c libharbol/vector/vector.c tagha_disassembler.c -o tagha_disasm
 
 debug:
-	$(CC) $(TESTFLAGS) $(SRCS) -o tagha_asm
+	$(CC) $(TFLAGS) $(SRCS) -o tagha_asm
+	$(CC) $(TFLAGS) libharbol/stringobj/stringobj.c libharbol/vector/vector.c tagha_disassembler.c -o tagha_disasm
 
 clean:
 	$(RM) *.o
