Added more necessary instructions
C has both arithmetic and logical shifting; Arithmetic shifts are done with signed integer types but Tagha only supported Logical shifting, so added Arithmetic left and right bit shifting.
Added Sign-extending memory loads to complement the zero-extending memory loads.

--- a/assembler/Makefile
+++ b/assembler/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wextra -Wall -std=c99 -static -s -O2 -flto
-TFLAGS = -Wextra -Wall -std=c99 -static -g -O2 -flto
+TFLAGS = -Wextra -Wall -std=c99 -g -O2 -flto
 
 SRCS = libharbol/stringobj/stringobj.c
 SRCS += libharbol/bytebuffer/bytebuffer.c
