Early July Update
Placed `TaghaFunc` where it applies.
Placed `const` where missing for `TaghaFunc` types.
Changed `tagha_module_run` to return an `int` and removed the integer return value pointer.
Added a new API functions: `tagha_module_heap_alloc` & `tagha_module_heap_free` to allow devs to have more freedom to export data to scripts without triggering an invalid memory exception.
Improved script heap mempool by rearranging memory blocks when they are merged.

--- a/tagha/Makefile
+++ b/tagha/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 #CC = clang-9
-CFLAGS = -Wextra -Wall -Wrestrict -std=c99 -s  -O2
-TFLAGS = -Wextra -Wall -Wrestrict -std=c99 -g  -O2
-PFlAGS = -Wextra -Wall -Wrestrict -std=c99 -pg -O2
+CFLAGS = -Wextra -Wall -Wrestrict -std=c99 -s  -O2 -mtune=native -march=native
+TFLAGS = -Wextra -Wall -Wrestrict -std=c99 -g  -O2 -mtune=native -march=native
+PFlAGS = -Wextra -Wall -Wrestrict -std=c99 -pg -O2 -mtune=native -march=native
 
 # -static
 
