small optimization update
Removed `osp` from execution engine signature.
Offsetted certain virtual-registers and tables to local variables.
Renamed `pc` to `ip` because it made more sense since `pc` is technically an instruction(s) pointer and not a program counter.

--- a/tagha/Makefile
+++ b/tagha/Makefile
@@ -30,8 +30,9 @@ profile:
 	$(AR) cr $(LIBNAME).a $(OBJS)
 
 disasm:
-	$(CC) -O2 -fverbose-asm -masm=intel -S $(SRCS)
-	#llvm-gcc -emit-llvm -S $(SRCS)
+	$(CC) -O2 -masm=intel -S $(SRCS)
+#	llvm-gcc -emit-llvm -S $(SRCS)
+# -fverbose-asm
 
 clean:
 	$(RM) *.o
